--- a/recipes/waldorf-salad.html
+++ b/recipes/waldorf-salad.html
@@ -5,6 +5,28 @@
     <title>Waldorf Salad</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Waldorf Salad</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2023%2F01%2F30%2F16800-waldorf-salad-ii-ddmfs-3X4-0053.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="waldorf salad">
+    <h2>What is Waldorf Salad?</h2>
+    <p>A Waldorf salad is a fruit and nut salad that features a mayonnaise dressing.</p>
+    <p>It doesn't traditionally contain meat, but chicken is often added to make it a complete meal.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1/2 cup mayonnaise</li>
+        <li>1 tablespoon white sugar</li>
+        <li>1 teaspoon lemon juice</li>
+        <li>1/8 teaspoon salt</li>
+        <li>3 apples — peeled, cored, and chopped</li>
+        <li>1 cup thinly sliced celery</li>
+        <li>1/2 cup chopped walnuts</li>
+        <li>1/2 cup raisins (Optional)</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Whisk mayonnaise, sugar, lemon juice, and salt together in a serving bowl.</li>
+        <li>Stir in apples, celery, walnuts, and raisins. Cover and chill in the refrigerator until ready to serve.</li>
+    </ol>
 </body>
 </html>
