Add & Update | Chicken Pastina recipe & index link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/waldorf-salad.html">Waldorf Salad</a>
+    <li><a href="recipes/waldorf-salad.html">Waldorf Salad</a></li>
+    <li><a href="recipes/chicken-pastina.html">Chicken Pastina</a></li>
+    <li><a href=""></a></li>
 </body>
 </html>
