Add & Update | New recipe page & index link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Odin Recipes</h1>
     <li><a href="recipes/waldorf-salad.html">Waldorf Salad</a></li>
     <li><a href="recipes/chicken-pastina.html">Chicken Pastina</a></li>
-    <li><a href=""></a></li>
+    <li><a href="recipes/cottage-cheese-brownie-batter.html">Cottage Cheese Brownie Batter</a></li>
 </body>
 </html>
