Fix | Blank space at the bottom of the page

--- a/recipes/cottage-cheese-brownie-batter.html
+++ b/recipes/cottage-cheese-brownie-batter.html
@@ -24,6 +24,7 @@
         <li>1 cup blanched superfine almond flour</li>
         <li>5 tablespoons semisweet chocolate chips</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
         <li>Place cottage cheese, maple syrup, cocoa powder, oats, almond butter, vanilla, espresso powder, and salt into the cup of a high-speed blender.</li>
         <li>Blend until ingredients are smooth. Add almond flour to blender and blend until combined. Pulse if necessary to prevent warming the mixture.</li>
