Add & Update | CSS file & page adjust

--- a/recipes/cottage-cheese-brownie-batter.html
+++ b/recipes/cottage-cheese-brownie-batter.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cottage Cheese Brownie Batter</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Cottage Cheese Brownie Batter</h1>
+    <h1 class="adjust">Cottage Cheese Brownie Batter</h1>
     <img src="https://www.allrecipes.com/thmb/aQ2dNvxjOM_dqEqKyW1yu8Xvhgo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/8742653_Cottage-Cheese-Brownie-Batter_Kim-Shupe_4x3-6e400ec9f961449ea45164a3ab513f54.jpg" alt="Cottage Cheese Brownie Batter">
-    <h2>What is Cottage Cheese Brownie Batter?</h2>
+    <h2 class="size">What is Cottage Cheese Brownie Batter?</h2>
     <p>Cottage cheese brownie batter is a unique dessert that combines the creamy texture of cottage cheese</p>
     <p>with rich chocolate flavors, offering a healthier alternative to traditional brownie batter.</p>
-    <h2>Ingredients</h2>
+    <h2 class="size">Ingredients</h2>
     <ul>
         <li>1 cup 4% milkfat small curd cottage cheese</li>
         <li>6 tablespoons maple syrup, or to taste</li>
@@ -24,7 +26,7 @@
         <li>1 cup blanched superfine almond flour</li>
         <li>5 tablespoons semisweet chocolate chips</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="size">Steps</h2>
     <ol>
         <li>Place cottage cheese, maple syrup, cocoa powder, oats, almond butter, vanilla, espresso powder, and salt into the cup of a high-speed blender.</li>
         <li>Blend until ingredients are smooth. Add almond flour to blender and blend until combined. Pulse if necessary to prevent warming the mixture.</li>
