--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="adjust">Odin Recipes</h1>
     <li><a href="recipes/waldorf-salad.html">Waldorf Salad</a></li>
     <li><a href="recipes/chicken-pastina.html">Chicken Pastina</a></li>
     <li><a href="recipes/cottage-cheese-brownie-batter.html">Cottage Cheese Brownie Batter</a></li>
