--- a/recipes/chicken-pastina.html
+++ b/recipes/chicken-pastina.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Pastina</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Chicken Pastina</h1>
+    <h1 class="adjust">Chicken Pastina</h1>
     <img src="https://www.allrecipes.com/thmb/GW-cyBlIeN2tsQd8vGg_SZEzhIQ=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/8724837_Chicken-Pastina_John-Mitzewich_4x3-6d704ecae6b64a7da911fef67a5cab67.jpg" alt="Chicken Pastina">
-    <h2>What is Chicken Pastina?</h2>
+    <h2 class="size">What is Chicken Pastina?</h2>
     <p>Chicken pastina is a type of comfort food cooked in a chicken broth</p>
-    <h2>Ingredients</h2>
+    <h2 class="size">Ingredients</h2>
     <ul>
         <li>4 cups prepared chicken broth</li>
         <li>salt to taste</li>
@@ -20,7 +22,7 @@
         <li>3/4 cup finely grated Parmigiano Reggiano cheese</li>
         <li>extra-virgin olive oil, for drizzling</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="size">Steps</h2>
     <ol>
         <li>Bring broth to a simmer over medium-high heat. Taste; season with salt if needed.</li>
         <li>Reduce heat to medium, and stir in pastina. Cook, stirring occasionally, for about 30 seconds less than the package directions, 5 to 8 minutes.</li>
